# VlasovTucker

./: .gitignore  CMakeLists.txt  README.md
data/geo/: box.geo  fully_periodic.geo  groove.geo  periodic_rect.geo  plane.geo  rect_box.geo  rectangle.geo  rectangle_2.geo  sphere.geo  test_mesh.geo  thin.geo  torus.geo
data/meshes/: cylinder.msh  fully_periodic.msh  fully_periodic_coarse.msh  fully_periodic_fine.msh  groove.msh  groove_fine.msh  plane.msh  poisson_test_11102.msh  poisson_test_1265.msh  poisson_test_1989.msh  poisson_test_2780.msh  poisson_test_6683.msh  poisson_test_918.msh  rect_box_11102.msh  rect_box_1989.msh  rect_box_20913.msh  rect_box_46495.msh  rect_box_5284.msh  rect_box_918.msh  rectangle.msh  rectangle_fine.msh  rectangle_finer.msh  rectangle_mega_fine.msh  rectangle_mega_fine_2.msh  rectangle_mega_fine_3.msh  rectangle_mega_fine_4.msh  rectangle_mega_fine_5.msh  rectangle_mixed.msh  rectangle_super_duper_fine.msh  rectangle_super_fine.msh  rectangle_thin.msh  rectangle_thin_fine.msh  rectangle_ultra_fine.msh  rectangle_ultra_fine_2.msh  rectangle_very_fine.msh  simple.msh  sphere.geo  sphere.msh  sphere_fine.msh  test_mesh.geo  (+10 more)
data/meshes/poisson_tests/: box_10021_tets.msh  box_14324_tets.msh  box_21756_tets.msh  box_37523_tets.msh  box_4955_tets.msh  sphere_19938_tets.msh  sphere_2697_tets.msh  sphere_38931_tets.msh  sphere_5955_tets.msh
examples/: CMakeLists.txt  bump_on_tail.cpp  instability.cpp  landau_damping.cpp  oscillations.cpp  sheath.cpp
include/boltz-t-cpp/mesh-1d/: star.vrt
include/boltz-t/mesh-1d/: star.bnd  star.cel  star.inp
src/: constants.h  full.cpp  full.h  header.h  log.h  mesh.cpp  mesh.h  multicomponent_solver.cpp  multicomponent_solver.h  particle_data.cpp  particle_data.h  plasma_parameters.cpp  plasma_parameters.h  poisson.cpp  poisson.h  primitives.cpp  primitives.h  read_mesh.cpp  read_mesh.h  run.cpp  smoother.cpp  smoother.h  solver.cpp  solver.h  timer.h  tucker.cpp  tucker.h  typedefs.h  velocity_grid.cpp  velocity_grid.h  vtk.cpp  vtk.h
test/: CMakeLists.txt  mesh_test.cpp  mshio_test.cpp  poisson_test.cpp  test_tensors.cpp  timer.h  tucker_test.cpp
